[gd_scene load_steps=3 format=3 uid="uid://c2mhbq3illg0t"]

[ext_resource type="Script" path="res://prog_54c.gd" id="1_n5l6r"]

[sub_resource type="LabelSettings" id="LabelSettings_qhdu0"]
font_size = 33

[node name="Prog54c" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n5l6r")

[node name="Label" type="Label" parent="."]
offset_left = 126.0
offset_top = 6.0
offset_right = 649.0
offset_bottom = 55.0
text = "Radius:"
label_settings = SubResource("LabelSettings_qhdu0")
horizontal_alignment = 1

[node name="lblCir" type="Label" parent="."]
offset_left = 115.0
offset_top = 333.0
offset_right = 643.0
offset_bottom = 382.0
text = "Cir:"
label_settings = SubResource("LabelSettings_qhdu0")
horizontal_alignment = 1

[node name="lblArea" type="Label" parent="."]
offset_left = 600.0
offset_top = 335.0
offset_right = 1130.0
offset_bottom = 384.0
text = "Area:
"
label_settings = SubResource("LabelSettings_qhdu0")
horizontal_alignment = 1

[node name="lblRad" type="Label" parent="."]
offset_left = 364.0
offset_top = 250.0
offset_right = 894.0
offset_bottom = 299.0
text = "Radius:
"
label_settings = SubResource("LabelSettings_qhdu0")
horizontal_alignment = 1

[node name="txtRad" type="LineEdit" parent="."]
offset_left = 205.0
offset_top = 56.0
offset_right = 560.0
offset_bottom = 163.0

[node name="btnCalculate" type="Button" parent="."]
offset_left = 118.0
offset_top = 415.0
offset_right = 358.0
offset_bottom = 512.0
text = "Calculate"

[node name="btnClear" type="Button" parent="."]
offset_left = 503.0
offset_top = 415.0
offset_right = 743.0
offset_bottom = 512.0
text = "Clear"

[node name="btnExit" type="Button" parent="."]
offset_left = 858.0
offset_top = 415.0
offset_right = 1098.0
offset_bottom = 512.0
text = "Exit"

[connection signal="pressed" from="btnCalculate" to="." method="_on_btn_calculate_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btnExit" to="." method="_on_btn_exit_pressed"]
